# sure-vqa

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_eval.txt
med_vlm_robustness/: datamodule.py  dataset.py  eval_bert_score.py  inference.py  metrics_comparison.py  mistral_eval.py  model.py  robustness.py  run_eval.py  train.py  utils.py
med_vlm_robustness/config/eval/: metrics_comparison_defaults.yaml  metrics_eval_defaults.yaml  robustness_defaults.yaml  select_questions_rater_study_defaults.yaml
med_vlm_robustness/config/inference/: inference_defaults.yaml  inference_pretrained_defaults.yaml
med_vlm_robustness/config/train/: training_defaults.yaml
med_vlm_robustness/data/: README.md  mimic_cxr_vqa_data.py  ovqa_clean.py
med_vlm_robustness/eval/: eval_metrics.py  gemma_eval.py  gpt4_eval.py
med_vlm_robustness/human_rater_study/: README.md  human_rater_study.py  select_questions_rater_study.py
med_vlm_robustness/prompts/: prompt.txt  prompt_closed.txt  prompt_closed_multilabel.txt
