[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-vlm-robustness"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "torch==2.1.2",
    "evaluate==0.4.3",
    "albumentations==1.3.1",
    "accelerate>=0.26.0",
    "bitsandbytes==0.41.0",
    "deepspeed==0.14.4",
    "huggingface-hub>=0.23.2",
    "imageio==2.33.1",
    "ipykernel==6.29.0",
    "ipython==8.20.0",
    "ipywidgets==8.1.1",
    "jupyter==1.0.0",
    "jupyterlab==4.0.10",
    "lightning==2.3.0",
    "lightning-utilities==0.10.0",
    "loguru==0.7.2",
    "Markdown==3.5.2",
    "matplotlib==3.8.2",
    "MedPy==0.4.0",
    "ndjson==0.3.1",
    "nibabel==5.2.0",
    "nltk==3.8.1",
    "numpy==1.26.3",
    "ninja",
    "omegaconf==2.3.0",
    "openai==1.30.1",
    "opencv_python_headless==4.9.0.80",
    "pandas==2.1.4",
    "pytorch_lightning>=1.6.5",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "torch==2.1.2",
    "tqdm==4.66.1",
    "transformers==4.46.3",
    "wandb",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]

[tool.setuptools.packages.find]
include = ["med_vlm_robustness*"]




